--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,1 +1,43 @@
+{% assign sidebar = site.data.data.sidebar %}
+<div class="sidebar-wrapper">
 
+  <div class="profile-container">
+
+    {% if sidebar.avatar %}
+    <img class="avatar" src="{{ site.baseurl }}/assets/images/{{ sidebar.avatar }}" alt="profile picture" />
+    {% endif %}
+
+    {% if sidebar.name %}
+    <h1 class="name">{{ sidebar.name }}</h1>
+    {% endif %}
+
+    {% if sidebar.tagline %}
+    <h3 class="tagline">{{ sidebar.tagline }}</h2>
+    {% endif %}
+
+
+    {% if sidebar.tagline %}
+    <h3 class="timezone">{{ sidebar.timezone }}</h3>
+    {% endif %}
+    
+
+    {% if sidebar.tagline %}
+    <h3 class="location">{{ sidebar.location }}</h4>
+    {% endif %}
+
+  </div><!--//profile-container-->
+
+  {% include contact.html %}
+
+  {% if sidebar.education %}
+    {% include education.html %}
+  {% endif %}
+
+  {% include language.html %}
+  {% include interests.html %}
+
+  {% if sidebar.interests %}
+    {% include intrests.html %}
+  {% endif %}
+
+</div><!--//sidebar-wrapper-->
