--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,9 +33,9 @@
     {% include education.html %}
   {% endif %}
 
+  {% include language %}
   {% include language.html %}
-  {% include interests.html %}
-
+  
   {% if sidebar.interests %}
     {% include intrests.html %}
   {% endif %}
