--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,7 +34,8 @@
   {% endif %}
 
   {% include language %}
-  {% include language.html %}
+    {% include language.html %}
+  {% endif %}
   
   {% if sidebar.interests %}
     {% include intrests.html %}
