--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,8 +36,8 @@
   {% include language.html %}
   {% include interests.html %}
   
-  {% if sidebar.interests %}
-    {% include intrests.html %}
+  {% if sidebar.about %}
+    {% include about.html %}
   {% endif %}
 
 </div><!--//sidebar-wrapper-->
