--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -1,1 +1,18 @@
+{% assign about-me = site.data.data.about-me %}
+{% if about-me %}
+<section class="section summary-section">
 
+  <h2 class="section-title">
+    <span class="fa-stack fa-xs">
+      <i class="fas fa-circle fa-stack-2x"></i>
+      <i class="fas fa-user fa-stack-1x fa-inverse"></i>
+    </span>
+    {{ about-me.title }}
+  </h2>
+
+  <div class="summary">
+    {{ about-me.summary | markdownify }}
+  </div><!--//summary-->
+    
+</section><!--//section-->
+{% endif %}
